@@ -1,59 +1,0 @@
-/*
- * $Id$
- *
- * Copyright 2017 - 2019 Allen D. Ball.  All rights reserved.
- */
-package ball.http.annotation.processing;
-
-import ball.annotation.ServiceProviderFor;
-import ball.annotation.processing.For;
-import ball.http.annotation.Entity;
-import javax.annotation.processing.Processor;
-import javax.annotation.processing.RoundEnvironment;
-import javax.lang.model.element.AnnotationMirror;
-import javax.lang.model.element.AnnotationValue;
-import javax.lang.model.element.Element;
-import javax.lang.model.element.TypeElement;
-import lombok.NoArgsConstructor;
-import lombok.ToString;
-import org.apache.http.entity.ContentType;
-
-import static ball.util.MapUtil.getByKeyToString;
-import static javax.tools.Diagnostic.Kind.ERROR;
-
-/**
- * {@link Entity} parameter {@link java.lang.annotation.Annotation}
- * {@link Processor}
- *
- * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
- * @version $Revision$
- */
-@ServiceProviderFor({ Processor.class })
-@For({ Entity.class })
-@NoArgsConstructor @ToString
-public class EntityProcessor
-             extends ProtocolMethodParameterAnnotationProcessor {
-    @Override
-    public void process(RoundEnvironment roundEnv,
-                        TypeElement annotation,
-                        Element element) throws Exception {
-        super.process(roundEnv, annotation, element);
-
-        AnnotationMirror mirror = getAnnotationMirror(element, annotation);
-        AnnotationValue value =
-            getByKeyToString(mirror.getElementValues(), "value()");
-
-        if (value != null) {
-            try {
-                ContentType.parse((String) value.getValue());
-            } catch (Exception exception) {
-                print(ERROR,
-                      element,
-                      element.getKind() + " annotated with "
-                      + AT + annotation.getSimpleName()
-                      + " but cannot convert `" + value.toString()
-                      + "' to " + ContentType.class.getName());
-            }
-        }
-    }
-}
